# port-scanner

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Doxyfile  README.md  README_8md.html  annotated.html  annotated_dup.js  classPrinter-members.html  classPrinter.html  classPrinter__coll__graph.map  classPrinter__coll__graph.md5  classPrinter_a07386ac3a06a838329a1dbb49b5add69_cgraph.map  classPrinter_a07386ac3a06a838329a1dbb49b5add69_cgraph.md5  classPrinter_a07386ac3a06a838329a1dbb49b5add69_icgraph.map  classPrinter_a07386ac3a06a838329a1dbb49b5add69_icgraph.md5  classPrinter_ac310f001e2d234ce9ff3b3ffce5567ba_icgraph.map  classPrinter_ac310f001e2d234ce9ff3b3ffce5567ba_icgraph.md5  classScanner-members.html  classScanner.html  classScanner.js  classScanner__coll__graph.map  classScanner__coll__graph.md5  classScanner_a36e8566701a74e73668ee0ea4b21f9c6_cgraph.map  classScanner_a36e8566701a74e73668ee0ea4b21f9c6_cgraph.md5  classScanner_a3c3fa32fc14afcc470e18d418770ceb1_icgraph.map  classScanner_a3c3fa32fc14afcc470e18d418770ceb1_icgraph.md5  classScanner_a5d0f18ea208f78217945918d214f709e_icgraph.map  classScanner_a5d0f18ea208f78217945918d214f709e_icgraph.md5  classScanner_a8c0c87368ad65fedb1d3e83da5853666_icgraph.map  classScanner_a8c0c87368ad65fedb1d3e83da5853666_icgraph.md5  classScanner_a90741dae9b58ae04679a6e5111131ab9_icgraph.map  classScanner_a90741dae9b58ae04679a6e5111131ab9_icgraph.md5  classScanner_acef562247c88bd0ff7cba0c3cc9c85f4_cgraph.map  classScanner_acef562247c88bd0ff7cba0c3cc9c85f4_cgraph.md5  classes.html  dir_000001_000000.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  (+63 more)
.github/workflows/: cmake-ctest.yml  doxygen.yml
examples/: printer.cpp  scanner.cpp
include/: printer.hpp  scanner.hpp  types.hpp
man/: port-scanner.1
scripts/: build-packages.sh  common.sh  install.sh  nodiscard-placer.sh
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  classes_0.js  files_1.js  functions_0.js  functions_2.js  functions_3.js  namespaces_0.js  pages_0.js  pages_1.js  searchdata.js  typedefs_0.js  typedefs_1.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js
src/: main.cpp  printer.cpp  scanner.cpp
tests/: test_scanner.cpp
